--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+
+# vscode settings
 .vscode/
+
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyc
