--- a/docker-airflow/Dockerfile
+++ b/docker-airflow/Dockerfile
@@ -17,6 +17,7 @@ ARG AIRFLOW_USER_HOME=/usr/local/airflow
 ARG AIRFLOW_DEPS=""
 ARG PYTHON_DEPS=""
 ENV AIRFLOW_HOME=${AIRFLOW_USER_HOME}
+ENV AIRFLOW__CORE__FERNET_KEY='mt3G-l6ZlOHsImQjOVGFTeRjocEW-hEPjMOeYRiH9sE='
 
 # Define en_US.
 ENV LANGUAGE en_US.UTF-8
